test/libsolidity/syntaxTests/more_than_256_syntaxerrors.sol
contract C {
  function f() {
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
  }
}
// ----
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// SyntaxError: "continue" has to be in a "for" or "while" loop.
// Warning: There are more than 256 errors. Aborting.
